--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "autoload": {
     "psr-4": {
-      "iutnc\\action\\": "./src/classes"
+      "iutnc\\netvod\\": "./src/classes"
     }
   }
 }
